Make this build with modern Android Studio.

--- a/tensorflow/examples/android/build.gradle
+++ b/tensorflow/examples/android/build.gradle
@@ -25,10 +25,12 @@ getProject().setBuildDir('gradleBuild')
 buildscript {
     repositories {
         jcenter()
+        google()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath "com.android.tools.build:gradle:3.2.0"
         classpath 'org.apache.httpcomponents:httpclient:4.5.4'
     }
 }
@@ -36,11 +38,12 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google() // and here
     }
 }
 
 // set to 'bazel', 'cmake', 'makefile', 'none'
-def nativeBuildSystem = 'bazel'
+def nativeBuildSystem = 'none'
 
 // Controls output directory in APK and CPU type for Bazel builds.
 // NOTE: Does not affect the Makefile build target API (yet), which currently
@@ -77,7 +80,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '28.0.2'
 
     if (nativeBuildSystem == 'cmake') {
         defaultConfig {
